packages/cashc/test/compiler/TypeError/while_loop_bytes32_condition.cash
contract WhileLoopConditionTypeError() {
    function spend() {
        int i = 0;

        while (tx.inputs[0].outpointTransactionHash) {
            i = i + 1;
        }

        require(i > 0);
    }
}
